compiler/tests/snapshots/codegen_basic__branching_workflow_config_json.snap
---
source: tests/codegen_basic.rs
expression: config.content
---
{
  "schedule": "TZ=UTC 0 */10 * * * *",
  "walletAddress": "",
  "receiverAddress": ""
}
