compiler/tests/snapshots/codegen_basic__branching_workflow_package_json.snap
---
source: tests/codegen_basic.rs
expression: pkg.content
---
{
  "name": "branching-workflow",
  "version": "1.0.0",
  "main": "dist/main.js",
  "private": true,
  "scripts": {
    "postinstall": "bun x cre-setup"
  },
  "dependencies": {
    "@chainlink/cre-sdk": "^1.0.9",
    "zod": "^3.24",
    "viem": "^2.0"
  },
  "devDependencies": {
    "@types/bun": "1.2.21"
  }
}
