compiler/tests/snapshots/codegen_basic__kyc_minting_config_json.snap
---
source: tests/codegen_basic.rs
expression: config.content
---
{
  "schedule": "0 */10 * * * *",
  "walletAddress": "",
  "tokenContractAddress": "",
  "mintAmount": ""
}
