compiler/tests/snapshots/codegen_basic__kyc_minting_package_json.snap
---
source: tests/codegen_basic.rs
expression: pkg.content
---
{
  "name": "kyc-gated-minting",
  "version": "1.0.0",
  "main": "dist/main.js",
  "private": true,
  "scripts": {
    "postinstall": "bun x cre-setup"
  },
  "dependencies": {
    "@chainlink/cre-sdk": "^1.0.10",
    "zod": "^3.24",
    "viem": "^2.0"
  },
  "devDependencies": {
    "@types/bun": "1.2.21"
  }
}
