compiler/tests/snapshots/codegen_basic__kyc_minting_secrets_yaml.snap
---
source: tests/codegen_basic.rs
expression: secrets.content
---
secretsNames:
  KYC_API_KEY:
    - KYC_API_KEY
